--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.3.0",
     "hardhat-typechain": "^0.3.5",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1",
